Checkpoint before refactoring...  Work in progress.