@@ -5,6 +5,7 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -17,7 +18,7 @@ public class StackManager {
 	private final Map<Counter, Stack> counterStackTracker = new HashMap<>();
 	
 	public Stack of(Counter... counters) {
-		return of(Arrays.asList(counters));
+		return of(List.of(counters));
 	}
 
 	public SpaceshipStack of(Spaceship spaceship, Counter... counters) {
